--- a/src/main/webapp/esqueciSenha.xhtml
+++ b/src/main/webapp/esqueciSenha.xhtml
@@ -19,23 +19,18 @@
 
 				<p:panel>
 
-					<h:panelGrid columns="1" columnClasses="label, value">
+					<h:panelGrid columns="1">
 
-						<h:outputText id="loginLabel" value=" Insira CNPJ/NIF: *" />
-						<h:inputText id="usuario" value="#{UsuarioMBean}"
+						<h:outputText id="loginLabela" value=" Insira Email: *" />
+						<h:inputText id="usuarioa" value="#{a}"
 							required="true" style="width:240px" maxlength="14" />
-
-						<!--  <h:outputText id="senhaLabel" value="Senha: *" />
-						<h:inputSecret id="senha" value="#{usuarioMBean.usuario.senha}"
-							required="true" requiredMessage="O campo senha é requerido"
-							style="width:240px" />-->
 
 					</h:panelGrid>
 					<p />
 					<div align="center">
 
 						<h:commandButton value="Enviar"
-							action="#{usuarioMBean.doEfetuarLogin}"
+							action="#{a}"
 							style="height: 30px; font-size: 14px; width:220px" />
 
 					</div>
@@ -47,16 +42,7 @@
 
 					</div>
 					<p />
-					<!--  <div align="center">
-
-						<h:commandButton value="Recuperar Senha" action="#{a}"
-							style="height: 30px; font-size: 14px; width:150px; border: 0px; " />
-
-					</div>
-					<p />
-
-
-                    -->
+			
 
 				</p:panel>
 		</p:panel>
