--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -17,39 +17,34 @@
 			<h:graphicImage library="img" name="logo-senai.png"
 				style="width: 500px" />
 			<p />
-
-
 			<p:panel>
-
-
 				<h:form>
-
-					<p:commandLink event="onclick" ajax="true" update="imgb"
+					<p:commandLink event="onclick" ajax="true" update="imgb nome"
 						actionListener="#{usuarioMBean.trocaImagem}">
 						<h:graphicImage style="width: 25%; height: 8%;" id="imgb"
 							library="img" name="#{usuarioMBean.imagem}.jpg" />
 					</p:commandLink>
-				</h:form>
-xasda
 
+
+				</h:form>
+				<p:outputLabel id="nome"
+					value="#{usuarioMBean.imagem eq 'off' ? 'Empresa' : 'Administrador'}" />
+				<br /><br/>
 				<h:form>
 					<center>
 						<h:panelGrid columns="2">
 
 							<h:outputText id="loginLabel" value="CNPJ/NIF: *" />
-							<p:inputText id="usuario" value="#{usuarioMBean.empreOUadm}" required="true" style="width:240px"
-								maxlength="14" />
+							<p:inputText id="usuario" value="#{usuarioMBean.empreOUadm}"
+								required="true" style="width:240px" maxlength="14" />
 
 							<h:outputText id="senhaLabel" value="Senha: *" />
-							<p:password value="#{usuarioMBean.senha}" id="senha" required="true"
-								requiredMessage="O campo senha é requerido" style="width:240px" />
+							<p:password value="#{usuarioMBean.senha}" id="senha"
+								required="true" style="width:240px" />
 							<br />
 							<h:commandButton value="Entrar" action="#{usuarioMBean.logar}"
-								style="height: 30px; font-size: 14px; width:220px" />
+								style="height: 30px; font-size: 14px; width:100%;" />
 						</h:panelGrid>
-
-
-
 					</center>
 				</h:form>
 
@@ -64,9 +59,6 @@ xasda
 							style="height: 30px; font-size: 14px; width:150px; border: 0px; " />
 					</h:form>
 				</center>
-
-
-
 
 			</p:panel>
 
