--- a/src/main/webapp/homeADM.xhtml
+++ b/src/main/webapp/homeADM.xhtml
@@ -1,17 +1,18 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:p="http://primefaces.org/ui"
-	xmlns:ui="http://java.sun.com/jsf/facelets">
+	xmlns:p="http://primefaces.org/ui">
 	
-<h:head>
-	<meta charset="UTF-8" />
-</h:head>
-
-
-<h:body>
-
-</h:body>
+<ui:composition template="/WEB-INF/templeteADM/template.xhtml">
+	<ui:define name="title">Pagina inicial</ui:define>
+	<ui:define name="content">
+		<p:imputText placeholder="Login"></p:imputText>
+		<br />
+		<p:password placeholder="Senha"></p:password>
+	</ui:define>
+	
+</ui:composition>
 
 
 </html>
