--- a/src/main/webapp/WEB-INF/templateEmpresa/header.xhtml
+++ b/src/main/webapp/WEB-INF/templateEmpresa/header.xhtml
@@ -21,7 +21,7 @@
 			icon="ui-icon-person" />
 
 		<p:commandButton style="border: 0px" type="button" value="Ajuda"
-			icon="ui-icon-help" />
+			icon="ui-icon-help" onclick="PF('formem').show();"/>
 
 		<p:commandButton style="border: 0px" type="button" value="Historico"
 			icon="ui-icon-folder-collapsed" />
