--- a/src/main/webapp/temfiltro.xhtml
+++ b/src/main/webapp/temfiltro.xhtml
@@ -9,6 +9,13 @@
 
 <ui:composition template="/WEB-INF/templateEmpresa/templateEmpresa.xhtml">
 
+
+
+
+	<ui:define name="content">
+	
+	</ui:define>
+
 </ui:composition>
 
 
