--- a/src/main/webapp/WEB-INF/templateADM/templateADM.xhtml
+++ b/src/main/webapp/WEB-INF/templateADM/templateADM.xhtml
@@ -9,50 +9,123 @@
 <h:head>
 
 	<title><ui:insert name="title">Este é o template</ui:insert></title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+	<link rel="stylesheet"
+		href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
 
 </h:head>
 <h:body>
 
 	<div class="header">
 		<ui:insert name="header">
-			<nav class="navbar navbar-inverse">
-			  <div class="container-fluid">
-			    <div class="navbar-header">
-			      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-			        <span class="icon-bar"></span>
-			        <span class="icon-bar"></span>
-			        <span class="icon-bar"></span> 
-			      </button>
-			      <a class="navbar-brand" href="#">WebSiteName</a>
-			    </div>
-			    <div class="collapse navbar-collapse" id="myNavbar">
-			      <ul class="nav navbar-nav">
-			        <li class="active"><a href="#">Home</a></li>
-			        <li><a href="#">Page 1</a></li>
-			        <li><a href="#">Page 2</a></li> 
-			        <li><a href="#">Page 3</a></li> 
-			      </ul>
-			      <ul class="nav navbar-nav navbar-right">
-			        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-			        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-			      </ul>
-			    </div>
-			  </div>
+			<nav class="navbar navbar-inverse" style="border-radius: 0px">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+						<span class="icon-bar"></span> <span class="icon-bar"></span> <span
+							class="icon-bar"></span>
+					</button>
+					<ui:insert name="context">
+						<h:graphicImage style="width:200px ; margin-left: -15px ; margin-bottom: 2px" id="imgb" library="img" name="SENAaI.jpg" />
+					</ui:insert>
+				</div>
+				<div class="collapse navbar-collapse" id="myNavbar">
+
+					<ul class="nav navbar-nav navbar-right">
+						<li><a href="#"><span class="glyphicon glyphicon-user"></span>
+								Sign Up</a></li>
+						<li><a href="#"><span class="glyphicon glyphicon-log-in"></span>
+								Login</a></li>
+					</ul>
+				</div>
+			</div>
 			</nav>
 		</ui:insert>
 	</div>
-	
-	<div class="content" style="position: fixed  ;  bottom: 0  ; width: 30px  ;  background-color: black  ;  height: 100%  ;  color: white;">
-		<ui:insert name="content">Conteudo</ui:insert>
+
+
+
+
+
+
+
+
+	<div class="content" />
+<style>
+body {
+	font-family: "Lato", sans-serif;
+}
+
+.sidenav {
+	height: 100%;
+	width: 204px;
+	position: fixed;
+	z-index: 1;
+	top: 0;
+	left: 0;
+	background-color: #111;
+	overflow-x: hidden;
+	padding-top: 20px;
+	margin-top:51px;
+}
+
+a:hover{
+	background-color: #0080FF;
+}
+
+.sidenav a {
+	padding: 6px 6px 6px 10px;
+	text-decoration: none;
+	font-size: 120%;
+	color: #FAFAFA;
+	display: block;
+}
+
+.sidenav a:hover {
+	color: #f1f1f1;
+}
+
+.main {
+	margin-left: 200px; /* Same as the width of the sidenav */
+}
+
+@media screen and (max-height: 450px) {
+	.sidenav {
+		padding-top: 15px;
+	}
+	.sidenav a {
+		font-size: 18px;
+	}
+}
+</style>
+
+	<div class="sidenav">
+		<p style="font-size:140% ; align-content: center ; color: #DF0101">Menu</p>
+		<a class="glyphicon glyphicon-user" href="#">Estatística</a> 
+		<a href="#">Gerenciar Empresas</a> 
+		<a href="#">Criar ADM</a>
 	</div>
-	
-	<div class="footer">
-		<ui:insert name="footer">Rodapé</ui:insert>
-	</div>
-	
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+
+
+
+	<script
+		src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </h:body>
 
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
