--- a/src/main/webapp/homeADM.xhtml
+++ b/src/main/webapp/homeADM.xhtml
@@ -4,13 +4,13 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
 	
-<ui:composition template="/WEB-INF/templeteADM/templateADM.xhtml">
-	<ui:define name="title">Pagina inicial</ui:define>
-	<ui:define name="content">
-		<p:imputText placeholder="Login"></p:imputText>
-		<br />
-		<p:password placeholder="Senha"></p:password>
+<ui:composition template="/WEB-INF/templateADM/templateADM.xhtml">
+
+
+
+	<ui:define name="content">Pagina inicial
 	</ui:define>
+
 	
 </ui:composition>
 
