tela historio e esqueci a senha back end
FOCAR EM ESQUECI A SENHA!

--- a/src/main/webapp/perfilEmpresa.xhtml
+++ b/src/main/webapp/perfilEmpresa.xhtml
@@ -10,7 +10,7 @@
 	<ui:define name="content">
 		
 		
-		<p:panel style="margin-top:8%; align:center">
+		<p:panel style="margin-top:8%; align:center; margin-left:15%; margin-right:15%">
 
 		<h:panelGrid columns="1">
 
@@ -32,6 +32,7 @@
 	        
 		</h:panelGrid>
 		
+		<br/>
 		<h:commandButton value="Alterar" action="#{a}" style="height: 30px; font-size: 14px; width:220px"/>
 		
 		
