--- a/src/main/webapp/WEB-INF/templateEmpresa/header.xhtml
+++ b/src/main/webapp/WEB-INF/templateEmpresa/header.xhtml
@@ -29,8 +29,8 @@
 	</f:facet>
 
 	<f:facet name="right">
-		<p:commandButton style="border: 0px" type="button" value="Sair"
-			icon="ui-icon-closethick" />
+		<p:commandButton style="border: 0px" type="button" value="Sair" ajax="false"
+			icon="ui-icon-closethick" action="login"/>
 
 	</f:facet>
 
