--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -9,7 +9,9 @@
 	
 </h:head>
 <h:body>
-
+		<p:growl>
+			<p:autoUpdate/>
+		</p:growl>
 	<div class="center">
 		<p:panel value="Login" style="width: 600px">
 			<h:graphicImage library="img" name="logo-senai.png"
