Alterar Perfil Empresa 80%
quase pronto

--- a/src/main/webapp/perfilADM.xhtml
+++ b/src/main/webapp/perfilADM.xhtml
@@ -27,7 +27,7 @@
 			
 		</h:panelGrid>
 		<br/>
-		<h:commandButton value="Alterar" action="#{a}" style="height: 30px; font-size: 14px; width:220px"/>
+		<h:commandButton value="Editar" action="#{a}" style="height: 30px; font-size: 14px; width:220px"/>
 		
 		
 		
