--- a/src/main/webapp/WEB-INF/templateADM/templateADM.xhtml
+++ b/src/main/webapp/WEB-INF/templateADM/templateADM.xhtml
@@ -6,18 +6,26 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
 
+
+
 <h:head>
 
+	<link rel="stylesheet" type="text/css" href="resources/css/templateADM.css" />
 	<title><ui:insert name="title">Este é o template</ui:insert></title>
 	<link rel="stylesheet"
 		href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
 
 </h:head>
+
+
+
+
+
 <h:body>
 
 	<div class="header">
 		<ui:insert name="header">
-			<nav class="navbar navbar-inverse" style="border-radius: 0px">
+			<nav class="navbar navbar-inverse">
 			<div class="container-fluid">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -25,7 +33,7 @@
 							class="icon-bar"></span>
 					</button>
 					<ui:insert name="context">
-						<h:graphicImage style="width:200px ; margin-left: -15px ; margin-bottom: 2px" id="imgb" library="img" name="SENAaI.jpg" />
+						<h:graphicImage  id="imgb" library="img" name="SENAaI.jpg" />
 					</ui:insert>
 				</div>
 				<div class="collapse navbar-collapse" id="myNavbar">
@@ -50,66 +58,22 @@
 
 
 	<div class="content" />
-<style>
-body {
-	font-family: "Lato", sans-serif;
-}
 
-.sidenav {
-	height: 100%;
-	width: 204px;
-	position: fixed;
-	z-index: 1;
-	top: 0;
-	left: 0;
-	background-color: #111;
-	overflow-x: hidden;
-	padding-top: 20px;
-	margin-top:51px;
-}
-
-a:hover{
-	background-color: #0080FF;
-}
-
-.sidenav a {
-	padding: 6px 6px 6px 10px;
-	text-decoration: none;
-	font-size: 120%;
-	color: #FAFAFA;
-	display: block;
-}
-
-.sidenav a:hover {
-	color: #f1f1f1;
-}
-
-.main {
-	margin-left: 200px; /* Same as the width of the sidenav */
-}
-
-@media screen and (max-height: 450px) {
-	.sidenav {
-		padding-top: 15px;
-	}
-	.sidenav a {
-		font-size: 18px;
-	}
-}
-</style>
 
 	<div class="sidenav">
-		<p style="font-size:140% ; align-content: center ; color: #DF0101">Menu</p>
-		<a class="glyphicon glyphicon-user" href="#">Estatística</a> 
-		<a href="#">Gerenciar Empresas</a> 
-		<a href="#">Criar ADM</a>
+		<p>Menu</p>
+		<a class="glyphicon glyphicon-user" style="top:70px" href="#">
+		Estatística</a> 
+		<a class="glyphicon glyphicon-user" style="top:120px" href="#">
+		Gerenciar Empresas</a> 
+		<a class="glyphicon glyphicon-user" style="top:170px" href="#">
+		Criar ADM</a>
 	</div>
 
 
 
 
-	<script
-		src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </h:body>
 
