--- a/src/main/webapp/perfilEmpresa.xhtml
+++ b/src/main/webapp/perfilEmpresa.xhtml
@@ -48,11 +48,13 @@
 
 
 			<br />
+			
+			<h:form>
 			<center>
-				<h:commandButton value="Editar" action="#{a}"
-					style="height: 30px; font-size: 14px; width:220px" />
+				<h:commandButton value="Editar" action="alterarPerfilEmpresa"
+					style="height: 30px; font-size: 14px; width:220px" ajax="false" />
 			</center>
-
+			</h:form>
 
 		</p:panel>
 
