--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -29,6 +29,7 @@
 					</h:form>
 					</div>
 					<div class="img">
+				
 					<p:outputLabel id="nome"
 						value="#{usuarioMBean.imagem eq 'off' ? 'Empresa' : 'Administrador'}" />
 					</div>	
@@ -55,7 +56,7 @@
 				<p />
 				<center>
 					<h:form>
-						<h:commandButton value="Novo Usuário" ajax="false"
+						<h:commandButton value="Nova Empresa" ajax="false"
 							action="novaemp"
 							style="height: 30px; font-size: 14px; width:150px; border: 0px; " />
 					</h:form>
