--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -28,7 +28,7 @@
 						
 					</h:form>
 					</div>
-					<div class="img">
+					<div align="center">
 				
 					<p:outputLabel id="nome"
 						value="#{usuarioMBean.imagem eq 'off' ? 'Empresa' : 'Administrador'}" />
