--- a/src/main/webapp/perfilEmpresa.xhtml
+++ b/src/main/webapp/perfilEmpresa.xhtml
@@ -51,7 +51,7 @@
 			
 			<h:form>
 			<center>
-				<h:commandButton value="Editar" action="alterarPerfilEmpresa"
+				<h:commandButton value="Editar" action="alterarPerfilEmpresa?faces-redirect=true"
 					style="height: 30px; font-size: 14px; width:220px" ajax="false" />
 			</center>
 			</h:form>
