--- a/src/main/webapp/perfilADM.xhtml
+++ b/src/main/webapp/perfilADM.xhtml
@@ -4,16 +4,14 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
 
-<h:head>
-			<link rel="stylesheet" type="text/css" href="resources/css/perfilADM.css" />
-</h:head>
-
 <ui:composition template="/WEB-INF/templateADM/templateADM.xhtml">
+<ui:define name="title">Perfil ADM</ui:define>
+<ui:define name="css"><link rel="stylesheet" type="text/css" href="resources/css/perfilADM.css" /></ui:define>
 
 	<ui:define name="content">
 		
 		
-		<p:panel style="margin-left:280px; margin-top:6%; margin-right:65%; align:center">
+		<p:panel styleClass="esse">
 
 		<h:panelGrid columns="1">
 
@@ -26,11 +24,12 @@
 			<p:outputLabel id="senha" value="Senha: #{usuarioMBean.adm.senha}"/><br/>
 	        
 			<p:outputLabel id="telefone" value="Telefone: #{usuarioMBean.adm.telefone}"/><br/><br/>
-	        
-			
+
 		</h:panelGrid>
 		<br/>
-		<h:commandButton value="Editar" action="#{a}" style="margin-left:50px; height: 30px; font-size: 14px; width:220px"/>
+
+			<h:commandButton value="Editar" action="#{a}" style="margin-left: 40%; height: 30px; font-size: 14px; width:150px"/>
+
 		
 		
 		
