--- a/src/main/webapp/WEB-INF/templateADM/templateADM.xhtml
+++ b/src/main/webapp/WEB-INF/templateADM/templateADM.xhtml
@@ -33,10 +33,10 @@
 	<ui:insert name="context">
 	<h:graphicImage  id="imgb" library="img" name="SENAaI.jpg" style="margin-bottom: 40px" />
 	</ui:insert>
-  <a href="#home"><i class="fa fa-fw fa-bar-chart"></i> Estatisticas</a>
-  <a href="#services"><i class="fa fa-fw fa-wrench"></i> Empresas</a>
-  <a href="#clients"><i class="fa fa-fw fa-user-plus"></i> Criar ADM</a>
-  <a href="#clients"><i class="fa fa-fw fa-user"></i> Perfil</a>
+  <a href="homeADM.xhtml"><i class="fa fa-fw fa-bar-chart"></i> Estatisticas</a>
+  <a href="empresasADM.xhtml"><i class="fa fa-fw fa-wrench"></i> Empresas</a>
+  <a href="popupCriarUsuarioAdm.xhtml"><i class="fa fa-fw fa-user-plus"></i> Criar ADM</a>
+  <a href="perfilADM.xhtml"><i class="fa fa-fw fa-user"></i> Perfil</a>
   <a href="#clients"><i class="fa fa-fw fa-sign-out"></i> Sair</a>
 
 </div>
