--- a/src/main/webapp/popupCriarUsuarioAdm.xhtml
+++ b/src/main/webapp/popupCriarUsuarioAdm.xhtml
@@ -3,14 +3,21 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:ui="http://java.sun.com/jsf/facelets">
-<h:head>
-	<meta charset="UTF-8" />
-</h:head>
-<h:body>
+	
+<ui:composition template="/WEB-INF/templateADM/templateADM.xhtml">
 
+<ui:define name="css"><link rel="stylesheet" type="text/css" href="resources/css/homeADM.css" /></ui:define>
+
+<ui:define name="title">Criar ADM</ui:define>
+
+
+	<ui:define name="content">
+	
+	<h:body>
+
+<center>
 	<p:panel value="Login" style="width: 600px">
-		<h:graphicImage library="img" name="logo-senai.png"
-			style="width: 500px" />
+		<h:graphicImage library="img" name="/SENaI.jpg" />
 		<p />
 		<p:panel>
 			<h:form>
@@ -59,6 +66,14 @@
 
 		</p:panel>
 	</p:panel>
+	</center>
 
 </h:body>
+	
+	
+	
+	</ui:define>
+
+</ui:composition>
+
 </html>
