--- a/src/main/webapp/novaemp.xhtml
+++ b/src/main/webapp/novaemp.xhtml
@@ -24,7 +24,7 @@
 						<h:panelGrid columns="1">
 
 							<h:outputText value="Nome da Empresa: " />
-							<p:inputText value="#{cadastroEmpresaMBean.emp.nome}"
+							<p:inputText label="Nome da Empresa" value="#{cadastroEmpresaMBean.emp.nome}"
 								required="true" style="width: 350px;" />
 
 							<p:outputLabel for="cnpj" value="Cnpj:" />
@@ -32,38 +32,47 @@
 								mask="99.999.999/9999-99" required="true" style="width: 350px;" />
 
 							<h:outputText value="Senha: " />
-							<p:password id="senha1" match="senha2"
+							<p:password label="Senha" id="senha1" match="senha2"
 								value="#{cadastroEmpresaMBean.emp.senha}" required="true"
 								style="width: 350px;" />
 
 							<!-- CONFIRMAR A SENHA TEM Q FAZER COM JQUERY -->
 							<h:outputText value="Confirmar Senha: " />
-							<p:password id="senha2" value="#{cadastroEmpresaMBean.emp.senha}"
+							<p:password label="Confirmar Senha" id="senha2" value="#{cadastroEmpresaMBean.emp.senha}"
 								required="true" style="width: 350px;" />
 
 							<h:outputText value="Representante: " />
-							<p:inputText value="#{cadastroEmpresaMBean.emp.representante}"
+							<p:inputText label="Representante"  value="#{cadastroEmpresaMBean.emp.representante}"
 								required="true" style="width: 350px;" />
 
 							<p:outputLabel for="tel" value="Telefone:" />
 							<p:inputMask id="tel"
+							label="Telefone"
 								value="#{cadastroEmpresaMBean.emp.telefone}"
 								mask="(999) 99999-9999" required="true" style="width: 350px;" />
 
 							<h:outputText value="Email: " />
-							<p:inputText value="#{cadastroEmpresaMBean.emp.email}"
+							<p:inputText 
+							label="Email"
+							value="#{cadastroEmpresaMBean.emp.email}"
 								required="true" style="width: 350px;" />
 
 							<h:outputText value="Rua: " />
-							<p:inputText value="#{cadastroEmpresaMBean.emp.rua}"
+							<p:inputText 
+							label="Rua"
+							value="#{cadastroEmpresaMBean.emp.rua}"
 								required="true" style="width: 350px;" />
 
 							<h:outputText value="Bairro: " />
-							<p:inputText value="#{cadastroEmpresaMBean.emp.bairro}"
+							<p:inputText 
+							label="Bairro"
+							value="#{cadastroEmpresaMBean.emp.bairro}"
 								required="true" style="width: 350px;" />
 
 							<h:outputText value="Cidade: " />
-							<p:inputText value="#{cadastroEmpresaMBean.emp.cidade}"
+							<p:inputText 
+							label="Cidade"
+							value="#{cadastroEmpresaMBean.emp.cidade}"
 								required="true" style="width: 350px;" />
 
 
